--- a/UI/Website/newParty.html
+++ b/UI/Website/newParty.html
@@ -7,14 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>New Party</title>
 </head>
 <body>
-    <button id="start-btn" onclick="Start()">Start Exploring</button>
-    <button id="party-btn" onclick="Party()" class="sec-btn">Create a Party</button>
-
-
-
-    <script src="scripts/index.js"></script>
+    
 </body>
 </html>
