--- a/UI/Website/main.html
+++ b/UI/Website/main.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/menu.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Document</title>
     <script src="scripts/index.js"></script>
-
 </head>
 <body>
-    <button id="start-btn" onclick="Start()">Start Exploring</button>
+    <div class="menu">
+        <div class="left-top-menu">
+            <div class="menu-item" id="btn1" onclick="btn(1)"><img src="images/group-ico.png"></div>
+            <div class="menu-item" id="btn2"><img src="images/chat-ico.png"></div>
+            <div class="menu-item" id="btn3"></div>
+        </div>
+        <div class="right-top-menu">
+            <div class="menu-item">Home</div>
+        </div>
 
-
-
+    </div>
 </body>
 </html>
