--- a/UI/Website/index.html
+++ b/UI/Website/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <input type="text" id="name" placeholder="Name">
     <button id="start-btn" onclick="Start()">Start Exploring</button>
 
 
